--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@drawable/wave"
     tools:context=".view.actvities.DashboardActivity">
 
     <!-- Top App Bar -->
@@ -89,10 +89,10 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:minHeight="112dp"
-            android:paddingVertical="16dp"
+            android:paddingVertical="15dp"
             android:text="Make Job"
             android:textSize="15sp"
-            android:maxLines="2"
+            android:maxLines="1"
             android:ellipsize="end"
             app:layout_columnWeight="1"
             app:layout_gravity="fill_horizontal"
@@ -109,10 +109,10 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:minHeight="112dp"
-            android:paddingVertical="16dp"
+            android:paddingVertical="15dp"
             android:text="Edit Profile"
             android:textSize="15sp"
-            android:maxLines="2"
+            android:maxLines="1"
             android:ellipsize="end"
             app:layout_columnWeight="1"
             app:layout_gravity="fill_horizontal"
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:minHeight="112dp"
-            android:paddingVertical="16dp"
+            android:paddingVertical="15dp"
             android:text="Job History"
             android:textSize="15sp"
             android:maxLines="2"
@@ -149,7 +149,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:minHeight="112dp"
-            android:paddingVertical="16dp"
+            android:paddingVertical="15dp"
             android:text="Withdraw"
             android:textSize="15sp"
             android:maxLines="2"
@@ -169,7 +169,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:minHeight="112dp"
-            android:paddingVertical="16dp"
+            android:paddingVertical="15dp"
             android:text="Message"
             android:textSize="15sp"
             android:maxLines="2"
@@ -189,7 +189,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:minHeight="112dp"
-            android:paddingVertical="16dp"
+            android:paddingVertical="15dp"
             android:text="Manage Job"
             android:textSize="15sp"
             android:maxLines="2"
